# triton_utils

./: Makefile  README.md  dev-requirements.txt  main.py  mypy.ini  pyinstaller.py  requirements.txt  setup.cfg
.github/workflows/: code-format-check.yml  make-build.yml
src/triton_utils/: __init__.py  bench.py  global_var.py  libentry.py  mod.py  shape.py  test.py  test_mod.py
