[metadata]
name = carlton_template
version = 0.1.0
author = Carlton
author_email = carlton2tang@gmail.com
description = A simple example to understand the basics of developing your first Python package.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/2niuhe/python_template_carlton
project_urls =
    Bug Tracker = https://github.com/2niuhe/python_template_carlton/issues
    repository = https://github.com/2niuhe/python_template_carlton
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    = src
python_requires = >=3.6

[options.entry_points]
console_scripts =
    test-hello = carlton_template.mod:hello

[options.packages.find]
where = src
