[metadata]
name = triton_utils
version = 0.1.0
author = 2niuhe
author_email = carlton2tang@gmail.com
description = A collection of utility functions and tools for Triton projects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/2niuhe/triton_utils
project_urls =
    Bug Tracker = https://github.com/2niuhe/triton_utils/issues
    repository = https://github.com/2niuhe/triton_utils
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    = src
python_requires = >=3.7


[options.packages.find]
where = src
